[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/ui-theme.tres" type="Theme" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LeftStickScore" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 256.0
margin_top = -172.0
margin_right = 296.0
margin_bottom = -158.0
text = "0"
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightStickScore" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -172.0
margin_right = -216.0
margin_bottom = -158.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -560.0
margin_right = 20.0
margin_bottom = -38.0
text = ".
.
.
.
.
.
.
.
.
.
.
.
.
.
."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -51.5
margin_right = 138.0
margin_bottom = 51.5
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -52.0
margin_right = 144.0
margin_bottom = 60.0
text = "Replay"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinMessage" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -192.0
margin_top = 136.0
margin_right = 192.0
margin_bottom = 216.0
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ReplayButton" to="." method="_on_ReplayButton_pressed"]
